syntax = "proto3";

option csharp_namespace = "CompanyManagement.Application.OrderService";

package OrderGrpcService;

service OrderGrpcService{
	rpc GetOrderById(GetOrderByIdRequest) returns (GetOrderByIdResponse);
	rpc ExistsWinnerByNationalCode(ExistsWinnerByNationalCodeRequest) returns (ExistsWinnerByNationalCodeResponse);

}

message GetOrderByIdRequest{
	int32 OrderId = 1;
}

message GetOrderByIdResponse{
	int32 ProductId = 1;
	string ProductCode = 2;
	int32 OrganizationId = 3;
	int32 OrderStatus = 4;
}

message ExistsWinnerByNationalCodeRequest{
	string NationalCode = 1;
}

message ExistsWinnerByNationalCodeResponse{
	 bool HasWinner=1;
}
